--- a/src/layouts/layout.css
+++ b/src/layouts/layout.css
@@ -46,7 +46,7 @@ html {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: "static/bg.jpg";
+    background-image: url("../../static/img/bg.jpg");
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover; 
